<resources>
    <string name="app_name">CapstoneProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Untitled Platformer</string>
    <string name="login_name">Username</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="creator_credit">Created by Ian Marler</string>
    <string name="play">Play</string>
    <string name="logout">Logout</string>
    <string name="shop">Shop</string>
    <string name="points">%1$s Points</string>
    <string name="platform">platform</string>
    <string name="back">Back</string>
</resources>